bk_ida/gccida/g1/propagate_one_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/flow.c:2095:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = (  struct rtx_def *)insn[1]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/flow.c:2107:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
|| ( v14 = ( rtx)insn[2], *( _WORD *)v14 != 47) && ( v14 = single_set_2( insn, v14)) == 0LL 
                 ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/flow.c:2121:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)reg_note->fld[0]; 
                       ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/flow.c:2171:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)insn[2]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/flow.c:2246:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v36 = ( __int64)insn[2]; 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/flow.c:2255:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( n = ( __int64)insn[4]; n; n = *( _QWORD *)( n + 16) ) 
                    ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/flow.c:2286:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v44 = ( __int64)insn[2]; 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/flow.c:2290:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( jj = ( __int64)insn[4]; jj; jj = *( _QWORD *)( jj + 16) ) 
                     ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/flow.c:2330:64: error: too many arguments provided to function-like macro invocation
fatal_insn( "Attempt to delete prologue/epilogue insn:", insn, ( const char *)&to, 1615, "propagate_one_insn"); 
                                                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/toplev.h:50:9: note: macro 'fatal_insn' defined here
#define fatal_insn(msgid, insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/flow.c:2330:1: error: use of undeclared identifier 'fatal_insn'; did you mean '_fatal_insn'?
fatal_insn( "Attempt to delete prologue/epilogue insn:", insn, ( const char *)&to, 1615, "propagate_one_insn"); 
^~~~~~~~~~
_fatal_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/toplev.h:44:13: note: '_fatal_insn' declared here
extern void _fatal_insn                 PARAMS ((const char *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/flow.c:2337:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)reg_note->fld[0]; 
                       ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/flow.c:2353:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v20.rtwint = ( __int64)v55->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/flow.c:2362:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v23 = ( __int16 *)nonnote_insn[2]; 
                  ^~~~~~~~~~~~~~~
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/propagate_one_insn/src/obj/flow.o] Error 1
